--- a/index.css
+++ b/index.css
@@ -293,3 +293,45 @@ body{
   border-bottom-right-radius: 60px;
   border-top: 0;
 }
+
+/* CROWN */
+
+.crown{
+  position: relative;
+  width: 270px;
+  border-top: 160px solid #ebbb30;
+  border-left: 25px solid transparent;
+  border-right: 25px solid transparent;
+}
+
+.spikes{
+  position: absolute;
+  top: -240px;
+  left: -25px;
+  width: 110px;
+  height: 150px;
+  background-color: #ccc;
+  border-radius: 50%;
+  box-shadow: 105px 0, 210px 0;
+  color: #ccc;
+}
+
+.base{
+  position: absolute;
+  width: 100%;
+  height: 1rem;
+  background-color: #ebbb30;
+  bottom: -25px;
+}
+
+.crown-circles{
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  background-color: #ebbb30;
+  border-radius: 50%;
+  top: -150px;
+  left: -30px;
+  box-shadow: 102px -12px, 207px -12px, 310px 0;
+  color: #ebbb30;
+}
